# RocSql

./: README.md  proof_task_client.py
CoqStoq/: .gitignore  .gitmodules  README.md  build_all.sh  coqstoq.opam  cutoff-theorems.json  pyproject.toml  test-theorems.json  val-theorems.json
CoqStoq/coqpyt/coqpyt/coq/: base_file.py  proof_file.py
CoqStoq/coqstoq/: __init__.py  create_theorem_lists.py  eval_thms.py  find_eval_thms.py  predefined_projects.py
CoqStoq/cutoff-repos/bb5/: CustomMakefile.coq  CustomMakefile.coq.conf  _Custom_CoqProject
CoqStoq/cutoff-repos/pnvrocqlib/: Makefile.coq.conf
CoqStoq/cutoff-theorems/bb5/: BB52.json  Compute.json  Finned.json  Finned1.json  Finned2.json  Finned3.json  Finned4.json  Finned5.json  FixedBin.json  Flip.json  Helper.json  Individual.json  LibTactics.json  Permute.json  ShiftOverflow.json  ShiftOverflowBins.json  Skelet10.json  Skelet15.json  Skelet17.json  Skelet26.json  Skelet33.json  Skelet34.json  Skelet35.json  TM.json
CoqStoq/test-repos/compcert/: .coq_verify_test_0.v  Makefile.coq.conf  temp_proof.v
CoqStoq/test-repos/compcert/cparser/: Parse.mli
CoqStoq/test-repos/fourcolor/: coq_verify_test_1.v
CoqStoq/test-repos/huffman/: coq_verify_test_39.v  temp_proof.v
CoqStoq/test-repos/poltac/: .Makefile.coq.d  .lia.cache
CoqStoq/test-theorems-reports/: bb5.json  bertrand.json  buchberger.json  compcert.json  coqeal.json  dblib.json  ext-lib.json  fourcolor.json  graph-theory.json  hoare-tut.json  huffman.json  math-classes.json  pnvrocqlib.json  poltac.json  qarith-stern-brocot.json  reglang.json  stalmarck.json  sudoku.json  zfc.json  zorns-lemma.json
CoqStoq/test-theorems/buchberger/theories/: Bar.json  Buch.json  BuchAux.json  BuchRed.json  Dickson.json  DivTerm.json  Fred.json  ListProps.json  Monomials.json  OpenIndGoodRel.json  POrder.json  Pcomb.json  Pcrit.json  Peq.json  Pminus.json  Pmult.json  Pmults.json  Pplus.json  Preduce.json  Preduceplus.json  Preducestar.json  Pspminus.json  Pspoly.json  Relation_Operators_compat.json  Term.json  WfR0.json  moreCoefStructure.json
CoqStoq/test-theorems/compcert/MenhirLib/: Alphabet.json  Interpreter.json  Interpreter_complete.json  Interpreter_correct.json  Main.json  Validator_classes.json  Validator_complete.json  Validator_safe.json
CoqStoq/test-theorems/compcert/aarch64/: Archi.json  Op.json  Stacklayout.json
CoqStoq/test-theorems/compcert/arm/: Archi.json  Stacklayout.json
CoqStoq/test-theorems/hoare-tut/: exgcd.json  hoarelogic.json  partialhoarelogic.json  totalhoarelogic.json
CoqStoq/test-theorems/poltac/: NAux.json  NGroundTac.json  NatAux.json  NatGroundTac.json  Natex.json  Nex.json  PolAux.json  RAux.json  Rex.json  ZAux.json  Zex.json
CoqStoq/test-theorems/zfc/: Axioms.json  Cartesian.json  Constructive.json  Hierarchy.json  Omega.json  Ordinal_theory.json  Plump.json  Replacement.json  Russell.json  Sets.json  zfc.json
CoqStoq/test-theorems/zorns-lemma/: CSB.json  Cardinals.json  Classical_Wf.json  CountableTypes.json  DecidableDec.json  DependentTypeChoice.json  EnsemblesSpec.json  Families.json  FiniteIntersections.json  FiniteTypes.json  FunctionProperties.json  IndexedFamilies.json  InfiniteTypes.json  InverseImage.json  Ordinals.json  Powerset_facts.json  Proj1SigInjective.json  Quotients.json  WellOrders.json  ZornsLemma.json
CoqStoq/tests/: test_checking.py  test_coqstoq.py  test_coqstoq_state.py  test_errors.py  test_find_thms.py
CoqStoq/val-repos/stalmarck/: README.md  coq-stalmarck-tactic.opam  coq-stalmarck.opam  meta.yml
(+593 files in other folders)
