opam-version: "2.0"
compiler: [
  "base-bigarray.base"
  "base-threads.base"
  "base-unix.base"
  "host-arch-arm64.1"
  "host-system-other.1"
  "ocaml.4.14.0"
  "ocaml-base-compiler.4.14.0"
  "ocaml-config.2"
  "ocaml-options-vanilla.1"
]
roots: [
  "coq.8.18.0"
  "coq-bignums.9.0.0+coq8.18"
  "coq-fourcolor.1.3.1"
  "coq-lsp.0.2.0+8.18"
  "coq-mathcomp-algebra.2.2.0"
  "coq-mathcomp-finmap.2.1.0"
  "coq-mathcomp-multinomials.2.2.0"
  "coq-mathcomp-real-closed.2.0.1"
  "coq-mathcomp-ssreflect.2.2.0"
  "coq-paramcoq.1.1.3+coq8.18"
  "ocaml-base-compiler.4.14.0"
]
installed: [
  "angstrom.0.16.1"
  "atd.2.15.0"
  "atdgen.2.15.0"
  "atdgen-runtime.2.15.0"
  "atdts.2.15.0"
  "base.v0.16.3"
  "base-bigarray.base"
  "base-threads.base"
  "base-unix.base"
  "bigstringaf.0.10.0"
  "biniou.1.2.2"
  "camlp-streams.5.0.1"
  "cmdliner.1.3.0"
  "conf-bash.1"
  "conf-gmp.4"
  "conf-pkg-config.3"
  "coq.8.18.0"
  "coq-bignums.9.0.0+coq8.18"
  "coq-core.8.18.0"
  "coq-elpi.2.0.0.1"
  "coq-fourcolor.1.3.1"
  "coq-hierarchy-builder.1.7.0"
  "coq-lsp.0.2.0+8.18"
  "coq-mathcomp-algebra.2.2.0"
  "coq-mathcomp-bigenough.1.0.1"
  "coq-mathcomp-field.2.2.0"
  "coq-mathcomp-fingroup.2.2.0"
  "coq-mathcomp-finmap.2.1.0"
  "coq-mathcomp-multinomials.2.2.0"
  "coq-mathcomp-real-closed.2.0.1"
  "coq-mathcomp-solvable.2.2.0"
  "coq-mathcomp-ssreflect.2.2.0"
  "coq-paramcoq.1.1.3+coq8.18"
  "coq-stdlib.8.18.0"
  "coqide-server.8.18.0"
  "cppo.1.7.0"
  "csexp.1.5.2"
  "dune.3.16.0"
  "dune-build-info.3.16.0"
  "dune-configurator.3.16.0"
  "easy-format.1.3.4"
  "elpi.1.18.1"
  "jane-street-headers.v0.16.0"
  "jst-config.v0.16.0"
  "memprof-limits.0.2.1"
  "menhir.20240715"
  "menhirCST.20240715"
  "menhirLib.20240715"
  "menhirSdk.20240715"
  "num.1.5-1"
  "ocaml.4.14.0"
  "ocaml-base-compiler.4.14.0"
  "ocaml-compiler-libs.v0.12.4"
  "ocaml-config.2"
  "ocaml-options-vanilla.1"
  "ocaml-syntax-shims.1.0.0"
  "ocamlfind.1.9.6"
  "parsexp.v0.16.0"
  "ppx_assert.v0.16.0"
  "ppx_base.v0.16.0"
  "ppx_cold.v0.16.0"
  "ppx_compare.v0.16.0"
  "ppx_derivers.1.2.1"
  "ppx_deriving.6.0.2"
  "ppx_deriving_yojson.3.9.0"
  "ppx_enumerate.v0.16.0"
  "ppx_globalize.v0.16.0"
  "ppx_hash.v0.16.0"
  "ppx_here.v0.16.0"
  "ppx_import.1.11.0"
  "ppx_inline_test.v0.16.1"
  "ppx_optcomp.v0.16.0"
  "ppx_sexp_conv.v0.16.0"
  "ppxlib.0.33.0"
  "re.1.12.0"
  "result.1.5"
  "seq.base"
  "sexplib.v0.16.0"
  "sexplib0.v0.16.0"
  "stdio.v0.16.0"
  "stdlib-shims.0.3.0"
  "stringext.1.6.0"
  "time_now.v0.16.0"
  "uri.4.4.0"
  "yojson.2.2.2"
  "zarith.1.14"
]
pinned: "coq.8.18.0"
